--- a/1.SourceCode/public/matrix-admin-package/HTML/css/matrix-style.css
+++ b/1.SourceCode/public/matrix-admin-package/HTML/css/matrix-style.css
@@ -61,6 +61,7 @@ hr{ border-top-color:#dadada;}
 	position: relative;
 	top: 26px;
 	width: 191px;
+	margin-top: 5px;
 }
 #header h1 a {
 	display: block;
